--- a/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
+++ b/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
@@ -32,6 +32,21 @@
             <app-field-error [field]="form.get('grade')"></app-field-error>
           </div>
 
+          <div class="mb-3">
+            <label class="text-sm">Ваша специализация</label>
+            <ng-select
+                [items]="professions"
+                [selectOnTab]="true"
+                bindLabel="label"
+                bindValue="item"
+                placeholder="Выберите вашу специальность"
+                appendTo=""
+                formControlName="profession"
+              >
+              </ng-select>
+            <app-field-error [field]="form.get('profession')"></app-field-error>
+          </div>
+
           <div *ngIf="errorMessage" class="mb-3 alert alert-danger">
             {{ errorMessage }}
           </div>
