--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -16,7 +16,7 @@
   <div class="position-relative">
     <div 
       *ngIf="!isAuthenticated"
-      class="position-absolute h-100 w-100 d-flex align-items-start justify-content-center pt-5">
+      class="position-absolute h-100 w-100 d-flex align-items-start justify-content-center pt-3">
       <div class="mt-5 alert alert-info mx-5 z-1">
         <div class="mb-2 h3">{{ isYourSalaryWithinMarketTitle }}</div>
         <div class="mb-5">Зарегистрируйтесь и оставьте данные о своей зарплате, чтобы узнать, сколько зарабатывают другие IT-специалисты в Казахстане.</div>
@@ -35,21 +35,18 @@
 
         <div *ngIf="salariesChart">
           <div class="mb-3">
-            <div *ngIf="showDataStub" class="mb-3">
-              <div class="h4">Демонстрационные данные:</div> 
-            </div>
     
             <div class="mb-5 d-flex justify-content-between align-items-end">
               <app-salary-block-value
                 [title]="'Медианная зарплата:'"
                 [value]="salariesChart.medianSalary"></app-salary-block-value>
     
-                <div *ngIf="salariesChart.medianRemoteSalary" class="d-none d-md-block">
+                <div *ngIf="!showDataStub && salariesChart.medianRemoteSalary" class="d-none d-md-block">
                   <app-salary-block-remote-value
                     [title]="'На удаленке:'"
                     [value]="salariesChart.medianRemoteSalary"></app-salary-block-remote-value>
                 </div>
-    
+
             </div>
     
             <div class="mb-3 d-flex justify-content-between align-items-end">
@@ -58,7 +55,7 @@
                 [title]="'Средняя зарплата:'"
                 [value]="salariesChart.averageSalary"></app-salary-block-value>
     
-                <div *ngIf="salariesChart.averageRemoteSalary" class="d-none d-md-block">
+                <div *ngIf="!showDataStub && salariesChart.averageRemoteSalary" class="d-none d-md-block">
                   <app-salary-block-remote-value
                     [title]="'На удаленке:'"
                     [value]="salariesChart.averageRemoteSalary"></app-salary-block-remote-value>
@@ -66,12 +63,27 @@
             </div>
            
     
-            <div *ngIf="!showDataStub" class="mb-3">
+            <div class="mb-3">
               <div class="text-muted mb-3 fst-italic">
                 <span>Рассчитано на основе {{ salariesChart.countOfRecords }} анкет(ы)</span>
               </div>
 
-              <div class="fst-italic text-muted" *ngIf="salariesChart.currentUserSalary && !showAdjustCurrentSalaryProfessionModal">
+              <div
+                *ngIf="showDataStub"
+                class="alert alert-warning">
+                <div class="h3">Внимание!</div>
+                <div class="mt-2">
+                  Вы видите <strong>обобщенные данные</strong> для всех специальностей и грейдов.
+                  <br />
+                  Для получения более точной статистики и возможности применять фильтры вам нужно
+                  <button class="btn-link-sm fst-italic font-weight-normal px-1" (click)="openAddSalaryAction()">{{ isAuthenticated ? 'добавить свою зарплату' : 'зарегистрироваться' }}</button>
+                </div>
+              </div>
+
+              <div
+                class="fst-italic text-muted"
+                *ngIf="!showDataStub && salariesChart.currentUserSalary && !showAdjustCurrentSalaryProfessionModal">
+
                 <div>Ваша текущая зарплата указана за {{ salariesChart.currentUserSalary.quarter }} квартал {{salariesChart.currentUserSalary.year}} года.</div>
                 <div>
                   Вы можете <button type="button" class="btn-link-sm fst-italic font-weight-normal" (click)="openEditSalaryAction()">изменить эти данные</button>
@@ -79,27 +91,19 @@
                 </div>
               </div>
 
-              <div *ngIf="showAdjustCurrentSalaryProfessionModal" class="alert alert-warning mt-3">
+              <div *ngIf="!showDataStub && showAdjustCurrentSalaryProfessionModal" class="alert alert-warning mt-3">
                 <strong class="me-2">Внимание!</strong>
                 <span>Ваша специальность указана как Developer. На сервисе появилось разделение на Mobile, Frontend, Backend, etc, 
                   поэтому вы можете <button type="button" class="btn-link-sm fst-italic font-weight-normal" (click)="openEditSalaryAction()">уточнить свою специальность</button></span>
               </div>
             </div>
 
-            <div *ngIf="showDataStub" class="mb-3">
-              <div class="text-muted">Данные сгенерированы для <strong>демонстрации</strong>. 
-                <button class="btn btn-outline-secondary btn-sm" (click)="openAddSalaryAction()">{{ isAuthenticated ? 'Добавить зарплату' : 'Зарегистрироваться' }}</button> для получения актуальных данных.</div>
-            </div>
           </div>          
   
-          <div *ngIf="salariesChart.salariesByMoneyBarChart" class="mt-5 mb-5">
+          <div *ngIf="!showDataStub && salariesChart.salariesByMoneyBarChart" class="mt-5 mb-5">
             <div class="mb-5">
-              <div class="mb-3 h3">
+              <div class="h3">
                 <span>Графики</span>
-                <span *ngIf="showDataStub" class="ms-2">(демонстрационные данные)</span>
-              </div>
-              <div *ngIf="!showDataStub" class="">
-                <i>TODO: в скором времени будет добавлена возможность фильтрации данных по специальностям, грейдам и фреймворкам/языкам программирования</i>
               </div>
             </div>
 
@@ -128,7 +132,7 @@
             </div>
           </div>
   
-          <div class="mb-3 text-muted text-end fst-italic">
+          <div *ngIf="!showDataStub" class="mb-3 text-muted text-end fst-italic">
             Идея подсмотрена у сервиса <a class="text-reset" href="https://career.habr.com/salaries" target="_blank">Habr.Карьера</a>, за что им большая благодарность.
           </div>
         </div>
