--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -13,14 +13,14 @@
       </div>
 
       <div class="col-md-3 mb-1">
-        <label class="text-sm">Специальности, включенные в выдачу</label>
+        <label class="text-sm">Данные по специальностям</label>
         <ng-select
             [items]="allProfessions"
             [hideSelected]="true"
             [selectOnTab]="true"
             bindLabel="label"
             bindValue="item"
-            placeholder="Выберите специальности"
+            placeholder="Все специальности"
             appendTo="body"
             formControlName="profsToInclude"
             [multiple]="true"
@@ -29,14 +29,14 @@
       </div>
 
       <div class="col-md-3 mb-1">
-        <label class="text-sm">Специальности, исключенные из выдачи</label>
+        <label class="text-sm">Исключить из выдачи специальности</label>
         <ng-select
             [items]="allProfessions"
             [hideSelected]="true"
             [selectOnTab]="true"
             bindLabel="label"
             bindValue="item"
-            placeholder="Выберите специальности"
+            placeholder="Выберите исключения"
             appendTo="body"
             formControlName="profsToExclude"
             [multiple]="true"
