Adjusted form page

--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -41,9 +41,9 @@
             </div>
 
             <div class="text-muted fst-italic">
-              Квартал и год необходим для того, чтобы в статистике учитывать только актуальные данные.
-              <br />
-              Указывая 1 квартал 2024го года, вы говорите, что в первом квартале этого года у вас <strong>в месяц</strong> была такая зарплата.
+              <div>Квартал и год необходим для того, чтобы в статистике учитывать только актуальные данные.</div>
+              <div>Указывая 1 квартал 2024го года, вы говорите, что в первом квартале этого года у вас <strong>в месяц</strong> была такая зарплата.</div>
+              <div>В статистике учитываются зарплаты за текущий и предыдущий год.</div>
             </div>
           </div>
   
