--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom border-2">
+<nav class="navbar navbar-expand-md navbar-light bg-white border-bottom border-2">
   <div class="container">
     <a class="navbar-brand" routerLink="/"
       ><img class="me-1 img-fluid logo-image" src="/assets/img/ti_logo_mini.png" /><span>Tech.Interview</span></a
@@ -14,8 +14,8 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav mb-2 mb-md-0">
         <li class="nav-item dropdown" *ngFor="let dropdown of dropdowns">
           <a
             class="nav-link dropdown-toggle"
