--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -44,7 +44,7 @@
           </ng-select>
       </div>
 
-      <div class="col-md-3 d-flex align-items-end">
+      <div class="col-md-3 mb-1 d-flex align-items-end">
         <div>
           <button type="submit" class="btn btn-outline-dark">Применить</button>
           <button type="reset" class="btn btn-outline-secondary ms-2" (click)="reset()">Сброс</button>
