--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -3,8 +3,23 @@
 <div class="container">
   <div class="card">
     <div class="card-body p-5">
-      <div class="fs-4 fw-light text-reset">
-        Author: <a href="https://mgorbatyuk.dev" target="_blank">Maxim Gorbatyuk</a>
+      <div class="fs-4">
+        <span class="fw-light">Author:</span>
+        <a class="text-reset ms-2" href="https://mgorbatyuk.dev" target="_blank">Maxim Gorbatyuk</a>
+      </div>
+
+      <div class="mb-3 mt-3">
+        <div class="mb-1">Contributors</div>
+        <div>
+          <ul>
+            <li>
+              <a class="text-reset" href="https://github.com/indicozy" target="_blank">Berkut Karlibay</a>
+            </li>
+            <li>
+              <a class="text-reset" href="https://github.com/maximgorbatyuk" target="_blank">Maxim Gorbatyuk</a>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <hr class="mt-3" />
