--- a/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
@@ -9,8 +9,10 @@
         [salaries]="salaries"
         [filter]="filter"
         [showApproveButton]="false"
+        [showExcludeButton]="true"
         (loadDataRequested)="loadData($event)"
         (deleteRequested)="deleteSalary($event)"
+        (excludeRequested)="excludeSalary($event)"
         ></app-salaries-admin-paginated-table>
 
     </div>
