--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="col-md-3 mb-1">
-        <label class="text-sm">Исключить из выдачи специальности</label>
+        <label class="text-sm">Исключения из выдачи</label>
         <ng-select
             [items]="allProfessions"
             [hideSelected]="true"
