--- a/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
+++ b/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
@@ -33,7 +33,7 @@
           </div>
 
           <div class="mb-3">
-            <label class="text-sm">Ваша специализация</label>
+            <label class="">Ваша специализация</label>
             <ng-select
                 [items]="professions"
                 [selectOnTab]="true"
@@ -45,6 +45,21 @@
               >
               </ng-select>
             <app-field-error [field]="form.get('profession')"></app-field-error>
+          </div>
+
+          <div class="mb-3">
+            <div><label class="">В каком городе Казахстана Вы живете?</label></div>
+            <ng-select
+                [items]="cities"
+                [selectOnTab]="true"
+                bindLabel="label"
+                bindValue="item"
+                placeholder="Выберите город"
+                appendTo=""
+                formControlName="city"
+              >
+              </ng-select>
+            <app-field-error [field]="form.get('city')"></app-field-error>
           </div>
 
           <div *ngIf="errorMessage" class="mb-3 alert alert-danger">
