--- a/src/app/modules/admin/components/salaries/salaries-admin-paginated-table/salaries-admin-paginated-table.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-paginated-table/salaries-admin-paginated-table.component.html
@@ -54,6 +54,7 @@
       <th>Profession</th>
       <th>Grade</th>
       <th>Company</th>
+      <th>City</th>
       <th>Created at</th>
       <th></th>
     </thead>
@@ -64,6 +65,7 @@
         <td>{{ item.profession }}</td>
         <td>{{ item.grade }}</td>
         <td>{{ item.company }}</td>
+        <td>{{ item.city }}</td>
         <td>{{ item.createdAt | date: 'yyyy-MM-dd HH:mm' }}</td>
         <td>
           <button
