--- a/src/app/modules/interviews/components/my-interview-templates/my-interview-templates.component.html
+++ b/src/app/modules/interviews/components/my-interview-templates/my-interview-templates.component.html
@@ -18,7 +18,7 @@
             <tr *ngFor="let item of templates; let i = index">
               <td>{{ i + 1 }}</td>
               <td>{{ item.title }}</td>
-              <td>{{ item.subjects.length }}</td>
+              <td>{{ item.subjects?.length ?? 0 }}</td>
               <td><app-visibility-label [visibility]="item.isPublic"></app-visibility-label></td>
               <td><app-label *ngFor="let label of item.labels" [label]="label"></app-label></td>
               <td>{{ item.updatedAt | date: 'HH:mm yyyy-MM-dd' }}</td>
