--- a/src/app/modules/interviews/components/my-interviews/my-interviews.component.html
+++ b/src/app/modules/interviews/components/my-interviews/my-interviews.component.html
@@ -19,7 +19,7 @@
               <td>{{ i + 1 }}</td>
               <td>{{ item.candidateName }}</td>
               <td><app-developer-grade-label [grade]="item.candidateGrade"></app-developer-grade-label></td>
-              <td>{{ item.subjects.length }}</td>
+              <td>{{ item.subjects?.length ?? 0 }}</td>
               <td><app-label *ngFor="let label of item.labels" [label]="label"></app-label></td>
               <td>{{ item.updatedAt | date: 'HH:mm yyyy-MM-dd' }}</td>
               <td>
