--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -16,7 +16,7 @@
       <button
         class="btn btn-primary btn-lg px-5"
         (click)="openAddSalaryAction()">
-        Зарегистрироваться
+        Войти / Зарегистрироваться
       </button>
     </div>
   </div>
