--- a/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.scss
+++ b/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.scss
@@ -6,7 +6,8 @@ canvas {
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 300px;
+    min-height: 250px;
+    max-height: 500px;
 }
 
 .list-group-item {
