--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.scss
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.scss
@@ -1,12 +1,13 @@
 canvas {
-    min-height: 250px;
+    min-height: 350px;
 }
 
 #canvas-container {
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 300px;
+    min-height: 350px;
+    max-height: 550px;
 }
 
 .list-group-item {
