--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
@@ -1,7 +1,9 @@
 <div class="">
   <div class="h5 mb-3">{{ title }}</div>
 
-  <div></div>
+  <div class="fst-italic">
+    Черные точки - это значения зарплаты, которые встречаются в выборке.
+  </div>
 
   <div class="" *ngIf="canvasId">
     <div id="canvas-container">
