Added skills to front pages

--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -157,12 +157,14 @@
 
   <app-add-salary-modal
     *ngIf="openAddSalaryModal"
+    [skills]="skills"
     (closed)="closeAddSalaryAction()"
     (salaryAdded)="onSalaryAdded($event)"
   ></app-add-salary-modal>
 
   <app-edit-salary-modal
     *ngIf="openEditCurrentSalaryModal && salariesChart"
+    [skills]="skills"
     [salarytoBeEdited]="salariesChart.currentUserSalary"
     (closed)="closeEditSalaryAction()"
     (salaryAdded)="onSalaryUpdated($event)"
