--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -79,6 +79,21 @@
             <app-field-error [field]="addSalaryForm.get('grade')"></app-field-error>
           </div>
 
+          <div class="mb-3" *ngIf="skillsAsOptions.length > 0">
+            <label class="text-sm">Ваш основной фреймворк или язык программирования</label>
+            <ng-select
+                [items]="skillsAsOptions"
+                [selectOnTab]="true"
+                bindLabel="label"
+                bindValue="item"
+                placeholder="Выберите ваш ЯП или фреймворк"
+                appendTo=""
+                formControlName="skillId"
+              >
+              </ng-select>
+            <app-field-error [field]="addSalaryForm.get('skillId')"></app-field-error>
+          </div>
+
           <div class="mb-3">
             <div><label class="">В каком городе Казахстана Вы живете?</label></div>
             <ng-select
