--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -28,6 +28,9 @@
         <span class="ms-3">Kazakhstan, Almaty</span>
       </div>
       <div class="mt-1">
+        <span><i class="bi bi-github"></i></span>
+        <span class="ms-3"><a class="text-reset" href="https://github.com/orgs/Techinterview-space/repositories" target="_blank">Github repositories</a></span>
+      <div class="mt-1">
         <span><i class="bi bi-envelope"></i></span>
         <span class="ms-3">ake111aa&#64;yandex.ru</span>
       </div>
