--- a/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
@@ -1,8 +1,8 @@
 <div class="">
-  <div class="h5 mb-3">{{ title }}</div>
+  <div class="h5 mb-3">Указанные ЯП/фреймворки в зарплатах</div>
 
   <div class="fst-italic mb-2" *ngIf="currentSalary != null && currentSalary.skillId == null; else hasSkillInSalary">
-    <div>Вы пока не указали ваш основной навык.</div>
+    <div>Вы пока не указали ваш основной ЯП/фреймворк.</div>
     <div>Уточнить данные <button type="button" class="btn-link-sm fst-italic font-weight-normal" (click)="openEditSalaryAction()">можно тут</button></div>
   </div>
 
@@ -15,6 +15,6 @@
 
 <ng-template #hasSkillInSalary>
   <div class="fst-italic">
-    Вы уже указали ваш основной навык. Спасибо!
+    Вы уже указали ваш основной ЯП/фреймворк. Спасибо!
   </div>
 </ng-template>
